# UL-Voxelization

./: .gitignore  CMakeLists.txt  README.md
Mesh/: 2Triangles.off  Cube.off  Triangle.off  blobby.off  kitten_poisson2.off
src/: Algorithms.cpp  Algorithms.h  Tests.cpp  Viewer.cpp  Voxelizer.cpp  display3D.cpp
